--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # Core dependencies for the notifications analysis application
-streamlit>=1.28.0
+streamlit=1.38.0
 pandas>=2.0.0
 numpy>=1.24.0
 matplotlib>=3.7.0
