--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # Core dependencies for the notifications analysis application
-streamlit=1.48.0
+streamlit>=1.40.0
 pandas>=2.0.0
 numpy>=1.24.0
 matplotlib>=3.7.0
@@ -17,5 +17,6 @@ seaborn>=0.12.0
 
 # Optional: For better data handling
 pyarrow>=12.0.0
+
 
 
