--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 # Core dependencies for the notifications analysis application
-streamlit>=1.36.0
+#streamlit>=1.36.0
+streamlit
 pandas>=2.0.0
 numpy>=1.24.0
 matplotlib>=3.7.0
@@ -47,6 +48,7 @@ torch>=2.0.0
 pytest>=7.4.0
 black>=23.0.0
 flake8>=6.0.0
+
 
 
 
